[package]
name = "fftclass"
version = "0.1.0"
authors = ["Artur Augusto Martins <arturaugusto@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpal = "0.12.1"
anyhow = "1.0.12"
ringbuf = "0.1.6"
hound = "3.4"

[dev-dependencies]